--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,18 @@ body {
 .logo {
   height: 3.25rem; }
 
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+.user-nav__icon {
+  width: 2.25rem;
+  height: 2.25rem; }
+
+.user-nav__user {
+  height: 3.75rem;
+  border-radius: 50%; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
