--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,9 +7,13 @@
 }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
@@ -18,7 +22,6 @@
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-
   flex: 0 0 18%;
 }
 
