--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -92,7 +92,7 @@
   }
 
   &__notification {
-    font-size: .8rem;
+    font-size: 0.8rem;
     height: 1.5rem;
     width: 1.5rem;
     border-radius: 50%;
@@ -101,7 +101,6 @@
     position: absolute;
     top: 1.6rem;
     right: 1.2rem;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,7 +112,6 @@
     margin-right: 1rem;
   }
 }
-
 //#############################################//
 // SIDE NAVIGATION
 
@@ -123,7 +121,33 @@
   margin-top: 3.5rem;
 
   &__item {
+    position: relative;
 
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1,0,0,1) 0.2s, background-color .1s;
+  }
+
+  &__item--active::before,
+  &__item:hover::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
   }
 
   &__link:link,
@@ -135,20 +159,19 @@
     padding: 1.5rem 3rem;
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 10;
   }
 
-  &__link:hover {
-
-  }
+  &__link:hover {}
 
   &__icon {
-  width: 1.5rem;
-  height: 1.5rem;
-  margin-right: 2rem;
-  fill: currentColor;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-right: 2rem;
+    fill: currentColor;
   }
 }
-
 //###############################################//
 // LEGAL TEXT
 
