--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -227,7 +227,7 @@
   }
 
   &__icon-location {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   &__rating {
@@ -236,7 +236,6 @@
     padding: 0 2.25rem;
     color: #fff;
     align-self: stretch;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -250,7 +249,7 @@
   }
 
   &__rating-count {
-    font-size: .8rem;
+    font-size: 0.8rem;
     text-transform: uppercase;
   }
 }
@@ -266,10 +265,18 @@
   display: inline-block;
   background-color: transparent;
   cursor: pointer;
-  transition: all 0.2s;
+  transition: all .2s;
+
+  & span {
+    margin-left: 3px;
+    transition: margin-left .2s;
+  }
 
   &:hover {
     color: var(--color-grey-dark-1);
+    span {
+      margin-left: 8px;
+    }
   }
 
   &:focus {
@@ -277,7 +284,6 @@
     animation: pulse 1s infinite;
   }
 }
-
 @keyframes pulse {
   0% {
     transform: scale(1);
@@ -294,15 +300,12 @@
     box-shadow: none;
   }
 }
-
 //###########################################//
 //  PARAGRAPH
 
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem;
 }
-
-
 //###########################################//
 // LIST
 
@@ -317,36 +320,32 @@
 
   &__item {
     flex: 0 0 50%;
-    margin-bottom: .7rem;
+    margin-bottom: 0.7rem;
   }
+
   &__item::before {
     content: '';
     display: inline-block;
     height: 1rem;
     width: 1rem;
-    margin-right: .7rem;
-
+    margin-right: 0.7rem;
     //  Older browsers
     // background-image: url('../img/chevron-thin-right.svg');
     // background-size: cover;
-
-//  Newer browsers -masks
+    //  Newer browsers -masks
     background-color: var(--color-primary);
-    -webkit-mask-image: url('../img/chevron-thin-right.svg');
+    -webkit-mask-image: url("../img/chevron-thin-right.svg");
     -webkit-mask-size: cover;
-
-    mask-image: url('../img/chevron-thin-right.svg');
+    mask-image: url("../img/chevron-thin-right.svg");
     mask-size: cover;
   }
 }
-
 //###########################################//
 // RECOMMEND
 
 .recommend {
   font-size: 1.3rem;
   color: var(--color-grey-dark-3);
-
   display: flex;
   align-items: center;
 
@@ -354,9 +353,7 @@
     margin-right: auto;
   }
 
-  &__friend {
-
-  }
+  &__friend {}
 
   &__photo {
     box-sizing: content-box;
@@ -365,8 +362,71 @@
     border-radius: 50%;
     border: 3px solid #fff;
 
-    &:not(:last-child){
-    margin-right: -1.5rem;
+    &:not(:last-child) {
+      margin-right: -1.5rem;
     }
+  }
+}
+//###########################################//
+// REVIEWS
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+
+  &__text {
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.4rem;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    color: var(--color-primary);
+    font-size: 2.2rem;
+    font-weight: 300;
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    z-index: 1;
   }
 }
