--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -119,12 +119,23 @@
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem;
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
 
   &__item {
     position: relative;
 
     &:not(:last-child) {
-      margin-bottom: 0.5rem;
+      margin-bottom: .5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-bottom: 0;
+      }
+    }
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
   }
 
@@ -161,9 +172,12 @@
     align-items: center;
     position: relative;
     z-index: 10;
-  }
 
-  &__link:hover {}
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
+  }
 
   &__icon {
     width: 1.5rem;
@@ -180,6 +194,10 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 //###############################################//
 // GALLERY
@@ -354,7 +372,9 @@
     margin-right: auto;
   }
 
-  &__friend {}
+  &__friend {
+    display: flex;
+  }
 
   &__photo {
     box-sizing: content-box;
@@ -364,7 +384,7 @@
     border: 3px solid #fff;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -378,6 +398,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -438,6 +463,10 @@
   padding: 3.5rem 0;
   text-align: center;
 
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
+
   &__book-now {
     font-size: 2rem;
     font-weight: 300;
@@ -447,6 +476,7 @@
 }
 //###########################################//
 // CALL TO ACTION
+
 .btn {
   font-size: 1.5rem;
   font-weight: 300;
@@ -478,7 +508,7 @@
   }
 
   &:hover {
-      background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
   }
 
   &:hover &__visible {
