completed-responsive design

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,13 @@
   align-items: center;
   justify-content: center;
 
+  @media only screen and (max-width: $bp-esmall) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+    overflow: hidden;
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -128,8 +135,7 @@
     position: relative;
 
     &:not(:last-child) {
-      margin-bottom: .5rem;
-
+      margin-bottom: 0.5rem;
       @media only screen and (max-width: $bp-medium) {
         margin-bottom: 0;
       }
@@ -172,10 +178,13 @@
     align-items: center;
     position: relative;
     z-index: 10;
-
     @media only screen and (max-width: $bp-medium) {
       justify-content: center;
       padding: 2rem;
+    }
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
     }
   }
 
@@ -184,6 +193,12 @@
     height: 1.5rem;
     margin-right: 2rem;
     fill: currentColor;
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: 0.7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 //###############################################//
@@ -194,7 +209,6 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
-
   @media only screen and (max-width: $bp-medium) {
     display: none;
   }
@@ -224,6 +238,10 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -258,17 +276,27 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px;
+    @media only screen and (max-width: $bp-small) {
+  font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
-    font-size: 0.8rem;
+    font-size: .8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+    font-size: .6rem;
+    }
   }
 }
 //###########################################//
@@ -372,7 +400,7 @@
     margin-right: auto;
   }
 
-  &__friend {
+  &__friends {
     display: flex;
   }
 
@@ -398,7 +426,6 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
-
   @media only screen and (max-width: $bp-medium) {
     padding: 2rem;
     margin-bottom: 3rem;
@@ -462,7 +489,6 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
-
   @media only screen and (max-width: $bp-medium) {
     padding: 2.5rem 0;
   }
