--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,6 +37,8 @@ Grey dark 3: #999
 $bp-largest: 75em;  //1200px
 $bp-large: 68.75em; // 1100px
 $bp-medium: 65.25em; // 900px
+$bp-small: 37.5em; // 600px / 16px = 37.5em
+$bp-esmall: 31.25em;// 500px
 // End of Breakpoints
 
 * {
